# PhotonLink

./: .gitignore  LICENSE  README.md
docs/: ADAPTIVE_ENGINE.md  ARCHITECTURE.md  AUDIT_PHASE1-5.md  BENCHMARK_REPORT.md  COLOR_MATRIX_FORMAT.md  FEC_ARCHITECTURE.md  FFI_DOCUMENTATION.md  FUTURE_EXPANSION.md  MIGRATION_REPORT.md  OPTICAL_STREAM_ARCHITECTURE.md  OPTICAL_STREAM_FORMAT.md  PHASE4_BENCHMARKS.md  PHASE5_PERFORMANCE.md  PHASE6_PERFORMANCE.md  PHASE6_READINESS.md  PHASE7_PERFORMANCE.md  PHASE7_READINESS.md  PHASE8_READINESS.md  PHASE9_PERFORMANCE.md  PHASE9_READINESS.md  RUST_ARCHITECTURE.md  SECURITY.md  SECURITY_RUST.md  SETUP.md
native/photonlink_core/: Cargo.toml  README.md
native/photonlink_core/src/: ffi.rs  lib.rs
native/photonlink_core/src/protocols/: checksum.rs  decoder.rs  encoder.rs  mod.rs  packetizer.rs  session.rs
photonlink_app/: .gitignore  .metadata  README.md  analysis_options.yaml  flutter_rust_bridge.yaml  pubspec.yaml
photonlink_core/: Cargo.toml  README.md
photonlink_core/src/: error.rs  frb_generated.rs  lib.rs
photonlink_core/src/api/: mod.rs
photonlink_core/src/chunking/: mod.rs
photonlink_core/src/compression/: mod.rs
photonlink_core/src/diagnostics/: mod.rs
photonlink_core/src/encryption/: mod.rs
photonlink_core/src/fec/: block_planner.rs  galois_field.rs  mod.rs  reed_solomon.rs
photonlink_core/src/hashing/: mod.rs
photonlink_core/src/packet/: mod.rs  pl2.rs  plcm.rs  plos.rs
photonlink_core/src/protocol/: crc32.rs  mod.rs
photonlink_core/src/reconstruction/: mod.rs
scripts/: init_platform.bat
(+326 files in other folders)
